# python-webui

./: .gitignore  LICENSE  README.md  bootstrap.bat  bootstrap.sh
.github/workflows/: pypi-publish.yml  python-publish.yml  update_binaries.yml
PyPI/: README.md  test_package.py
PyPI/Package/: LICENSE  README.md  pyproject.toml
PyPI/Package/src/webui/: bootstrap.bat  bootstrap.sh  load_library.py  testing.py  webui.py  webui_bindings.py
PyPI/Package/src/webui/webui-macos-clang-arm64/: webui-2.dylib
PyPI/Package/src/webui/webui-macos-clang-x64/: webui-2.dylib
PyPI/Package/src/webui/webui-macos-clang-x64.tar.gz/webui-macos-clang-x64/debug/: webui-2.dylib
PyPI/Package/src/webui/webui-windows-gcc-x64.zip/webui-windows-gcc-x64/include/: webui.h
PyPI/Package/src/webui/webui-windows-msvc-x64/: webui-2-static.lib  webui-2.lib
PyPI/Package/src/webui/webui-windows-msvc-x64.zip/webui-windows-msvc-x64/debug/: webui-2-static.lib
PyPI/Package/src/webui/webui-windows-msvc-x64.zip/webui-windows-msvc-x64/include/: webui.hpp
examples/: README.md  hello_world.py  minimal.py  public_ui.py  second.html  serve_folder.html  serve_folder.py
examples/andershell3000/: andershell3000.py
examples/call_js_from_python/: call_js_from_python.py
examples/call_python_from_js/: call_python_from_js.py
examples/react/: README.md  build_react.bat  build_react.sh  main.py
examples/send_raw_to_javascript/: index.html  main.py
examples/sending-raw/: index.html  main.py
examples/serve_folder/: bun_test.ts  deno_test.ts  index.html  main.py  note_test.js  second.html  (+2 more)
(+15 files in other folders)
