[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webui2"
version = "2.4.3"
authors = [
  { name="Hassan Draga" },
]
description = "Use any web browser as GUI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/webui-dev/python-webui"
"Bug Tracker" = "https://github.com/webui-dev/python-webui/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
webui = [
  "webui-macos-clang-x64/*",
  "webui-macos-clang-arm64/*",
  "webui-windows-msvc-x64/*",
  "webui-linux-gcc-arm/*",
  "webui-linux-gcc-arm64/*",
  "webui-linux-gcc-x64/*",
  "bootstrap.sh",
  "bootstrap.bat"]
